Added flow variables, included as a value map in the run state